--- a/01_HW/playlist.css
+++ b/01_HW/playlist.css
@@ -58,7 +58,7 @@ tbody tr:hover {
 }
 
 .song-link {
-  color: #1d3557;
+  color: #1c3559;
   font-weight: bold;
   text-decoration: none;
   cursor: pointer;
